recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: not found: value step
		avance(increment);gauche(angle);spiral(step-1,angle,length+increment,increment);
                                                       ^