recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if (steps == 0 ){
		return 
	}
	else {
		avance(increment);gauche(angle);spiral(step-1,angle,length+increment,increment);
	}
}
